# manon-rijkshuisstijl-2008-sphinx-theme

./: .gitignore  DEVELOPING.md  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: ci.yml  publish.yml
docs/source/: conf.py  copyright.md  customization.md  index.md  installation.md  privacy.md
docs/source/guide/: manon.md
docs/source/legal/: copyright.md  privacy.md
src/sphinx_rijkshuisstijl_2008/: __init__.py
src/sphinx_rijkshuisstijl_2008/theme/sphinx_rijkshuisstijl_2008/: breadcrumbs.html  layout.html  theme.conf
src/sphinx_rijkshuisstijl_2008/theme/sphinx_rijkshuisstijl_2008/static/css/: theme.css
static/js/: main.js
static/scss/: _admonition.scss  _align-end.scss  _blockquote.scss  _breadcrumb-bar.scss  _footer.scss  _header.scss  _main.scss  _meta.scss  _notification-icons.scss  _pagination.scss  _pre.scss  _search.scss  _sidemenu.scss  _visually-grouped.scss  index.scss
